--- a/.npmignore
+++ b/.npmignore
@@ -17,6 +17,7 @@ CONTRIBUTING.md
 ISSUE_TEMPLATE.md
 PULL_REQUEST_TEMPLATE.md
 karma.conf.js
+package-lock.json
 tsconfig.json
 tsconfig.test.json
 tslint.json
@@ -24,6 +25,7 @@ tslint.test.json
 webpack.config.js
 webpack.example.config.js
 yarn.lock
+.auditignore
 .editorconfig
 .gitignore
 .istanbul.yml
