--- a/package.json
+++ b/package.json
@@ -64,6 +64,12 @@
     "url": "https://github.com/RobotlegsJS/RobotlegsJS-SignalCommandMap/issues"
   },
   "homepage": "https://github.com/RobotlegsJS/RobotlegsJS-SignalCommandMap#readme",
+  "files": [
+    "lib"
+  ],
+  "directories": {
+    "lib": "./lib"
+  },
   "dependencies": {
     "@robotlegsjs/core": "^0.2.1",
     "@robotlegsjs/signals": "^0.2.0"
