--- a/package.json
+++ b/package.json
@@ -63,6 +63,12 @@
     "url": "https://github.com/RobotlegsJS/RobotlegsJS-EventEmitter3/issues"
   },
   "homepage": "https://github.com/RobotlegsJS/RobotlegsJS-EventEmitter3#readme",
+  "files": [
+    "lib"
+  ],
+  "directories": {
+    "lib": "./lib"
+  },
   "dependencies": {
     "@robotlegsjs/core": "^0.2.1",
     "tslib": "^1.9.3"
