--- a/package.json
+++ b/package.json
@@ -50,6 +50,12 @@
     "url": "https://github.com/RobotlegsJS/RobotlegsJS-Pixi-Palidor/issues"
   },
   "homepage": "https://github.com/RobotlegsJS/RobotlegsJS-Pixi-Palidor#readme",
+  "files": [
+    "lib"
+  ],
+  "directories": {
+    "lib": "./lib"
+  },
   "dependencies": {
     "@robotlegsjs/pixi": "^0.2.0",
     "tslib": "^1.9.3"
