createjs: use files and directories entries instead of .npmignore

--- a/package.json
+++ b/package.json
@@ -48,6 +48,12 @@
     "url": "https://github.com/RobotlegsJS/RobotlegsJS-CreateJS/issues"
   },
   "homepage": "https://github.com/RobotlegsJS/RobotlegsJS-CreateJS#readme",
+  "files": [
+    "lib"
+  ],
+  "directories": {
+    "lib": "./lib"
+  },
   "dependencies": {
     "@robotlegsjs/core": "^0.2.1",
     "tslib": "^1.9.3"
