createjs: add cleanup as post-script after deploying examples

--- a/package.json
+++ b/package.json
@@ -122,6 +122,9 @@
     "prep": [
       "build:example"
     ],
+    "post": [
+      "clean-up"
+    ],
     "commit": "update example build",
     "noprompt": false
   }
