--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dev": "webpack",
     "build": "webpack --env.production",
     "build:example": "webpack --config ./webpack.example.config.js --env.production",
-    "deploy:example": "gh-pages-deploy -- 'update example build'",
+    "deploy:example": "gh-pages-deploy",
     "prepare": "npm run clean-up && npm run compile:src",
     "prepublishOnly": "publish-please guard",
     "publish-please": "npm run tslint && npm run autoformat && npm run clean-up && npm run test && publish-please"
