createjs: add simple deploy-example bash script for deploying examples

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dev": "webpack",
     "build": "webpack --env.production",
     "build:example": "webpack --config ./webpack.example.config.js --env.production",
-    "deploy:example": "gh-pages-deploy",
+    "deploy:example": "./deploy-example.sh",
     "prepare": "npm run clean-up && npm run compile:src",
     "prepublishOnly": "publish-please guard",
     "publish-please": "npm run tslint && npm run autoformat && npm run clean-up && npm run test && publish-please"
@@ -78,7 +78,6 @@
     "easeljs": "^1.0.2",
     "es6-map": "^0.1.5",
     "es6-symbol": "^3.1.1",
-    "gh-pages-deploy": "^0.5.0",
     "glslify": "^7.0.0",
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
@@ -116,16 +115,5 @@
     "webpack-concat-plugin": "^3.0.0",
     "webpack-dev-server": "^3.1.10",
     "webpack-simple-progress-plugin": "^0.0.4"
-  },
-  "gh-pages-deploy": {
-    "staticpath": "dist",
-    "prep": [
-      "build:example"
-    ],
-    "post": [
-      "clean-up"
-    ],
-    "commit": "update example build",
-    "noprompt": false
   }
 }
