--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "bluebird": "^3.5.3",
     "browserify-versionify": "^1.0.6",
     "chai": "^4.2.0",
+    "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "easeljs": "^1.0.2",
     "es6-map": "^0.1.5",
