--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "publish-please": "npm run tslint && npm run autoformat && npm run clean-up && npm run test && publish-please"
   },
   "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
     "include": [
       "src/**/*.ts"
     ],
@@ -39,6 +40,7 @@
       "text-summary",
       "lcov"
     ],
+    "check-coverage": true,
     "sourceMap": true,
     "instrument": true
   },
@@ -78,6 +80,7 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/bluebird": "^3.5.28",
     "@types/chai": "^4.2.3",
     "@types/mocha": "^5.2.7",
@@ -91,7 +94,6 @@
     "eventemitter3": "^3.1.0",
     "glslify": "^7.0.0",
     "imports-loader": "^0.8.0",
-    "istanbul": "^0.4.5",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jsdom": "^15.2.0",
     "jsdom-global": "^3.0.2",
