--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "publish-please": "npm run tslint && npm run autoformat && npm run clean-up && npm run test && publish-please"
   },
   "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
     "include": [
       "src/**/*.ts"
     ],
@@ -39,6 +40,7 @@
       "text-summary",
       "lcov"
     ],
+    "check-coverage": true,
     "sourceMap": true,
     "instrument": true
   },
@@ -83,6 +85,7 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/bluebird": "^3.5.28",
     "@types/chai": "^4.2.3",
     "@types/mocha": "^5.2.7",
