--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
   },
   "dependencies": {
     "@robotlegsjs/core": "^1.0.3",
-    "@robotlegsjs/signals": "^1.0.3"
+    "@robotlegsjs/signals": "^1.0.3",
+    "tslib": "^1.11.1"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
