--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   ],
   "author": "RobotlegsJS",
   "contributors": [
+    "Bùi Việt Thành <thanhbv@sandinh.net>",
     "Endel Dreyer <endel.dreyer@gmail.com>",
     "Mateusz Szymik <adde197@gmail.com>",
     "Tiago Schenkel <tiago.schenkel@gmail.com>"
