--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,6 +1,6 @@
---require ts-node/register
---require source-map-support/register
---recursive
---full-trace
---bail
-test/**/*.test.ts
+{
+  "recursive": true,
+  "full-trace": true,
+  "bail": true,
+  "spec": "./test/**/*.test.ts"
+}
