--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -6,7 +6,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "test": "nyc mocha",
-    "karma": "node --max-old-space-size=2048 node_modules/.bin/karma start --single-run",
+    "karma": "node --max-old-space-size=2048 ./node_modules/karma/bin/karma start --single-run",
     "lint-fix:src": "eslint -c .eslintrc.js --ext .ts ./src --fix",
     "lint-fix:test": "eslint -c .eslintrc.js --ext .ts ./test --fix",
     "lint:src": "eslint -c .eslintrc.js --ext .ts ./src",
@@ -78,10 +78,10 @@
     "@types/bluebird": "^3.5.35",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
-    "@types/sinon": "^10.0.0",
+    "@types/sinon": "^10.0.1",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "bluebird": "^3.7.2",
     "browserify-versionify": "^1.0.6",
     "chai": "^4.3.4",
@@ -89,10 +89,10 @@
     "es6-symbol": "^3.1.3",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.3",
-    "eslint-plugin-jsdoc": "^34.8.2",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^35.1.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-unicorn": "^32.0.1",
     "glslify": "^7.1.1",
     "imports-loader": "^3.0.0",
@@ -114,14 +114,14 @@
     "puppeteer": "^9.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "sinon": "^10.0.0",
-    "sinon-chai": "^3.6.0",
+    "sinon": "^11.1.1",
+    "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.19",
     "terser-webpack-plugin": "^5.1.2",
-    "ts-loader": "^9.2.1",
-    "ts-node": "^9.1.1",
+    "ts-loader": "^9.2.2",
+    "ts-node": "^10.0.0",
     "typescript": "^4.2.4",
-    "webpack": "^5.37.1",
+    "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   }
