--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -16,10 +16,11 @@
     "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib && rimraf lib-test && rimraf dist-test",
     "compile:src": "tsc -d --importHelpers",
     "compile:test": "tsc -p tsconfig.test.json -d --importHelpers",
-    "dev": "webpack",
-    "build": "webpack --env production",
+    "dist:dev": "webpack",
+    "dist:production": "webpack --env production",
+    "build": "npm run clean-up && npm run compile:src",
     "prepare": "npm run clean-up && npm run compile:src",
-    "publish-please": "npm run lint && npm run autoformat && npm run clean-up && npm run build && npm run test && publish-please"
+    "publish-please": "npm run lint && npm run autoformat && npm run clean-up && npm run dist:production && npm run test && publish-please"
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
