--- a/packages/eventemitter3/package.json
+++ b/packages/eventemitter3/package.json
@@ -6,7 +6,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "test": "nyc mocha",
-    "karma": "node --max-old-space-size=2048 node_modules/.bin/karma start --single-run",
+    "karma": "node --max-old-space-size=2048 ./node_modules/karma/bin/karma start --single-run",
     "autoformat": "prettier --config .prettierrc --write --list-different \"{src,static,test,example,definitions}{/**/,/}*.{html,css,js,json,ts}\"",
     "tslint-check:src": "tslint-config-prettier-check ./tslint.json",
     "tslint-check:test": "tslint-config-prettier-check ./tslint.test.json",
@@ -16,8 +16,9 @@
     "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib && rimraf lib-test && rimraf dist-test",
     "compile:src": "tsc -d --importHelpers",
     "compile:test": "tsc -p tsconfig.test.json -d --importHelpers",
-    "dev": "webpack",
-    "build": "webpack --env.production",
+    "dist:dev": "webpack",
+    "dist:production": "webpack --env production",
+    "build": "npm run clean-up && npm run compile:src",
     "prepare": "npm run clean-up && npm run compile:src",
     "publish-please": "npm run tslint && npm run autoformat && npm run clean-up && npm run test && publish-please"
   },
@@ -33,7 +34,9 @@
       ".ts"
     ],
     "require": [
-      "ts-node/register"
+      "jsdom-global/register",
+      "ts-node/register",
+      "source-map-support/register"
     ],
     "reporter": [
       "text-summary",
@@ -79,49 +82,49 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/bluebird": "^3.5.30",
-    "@types/chai": "^4.2.10",
-    "@types/mocha": "^7.0.2",
-    "@types/sinon": "^7.5.2",
-    "@types/webpack-env": "^1.15.1",
+    "@types/bluebird": "^3.5.35",
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@types/sinon": "^10.0.1",
+    "@types/webpack-env": "^1.16.0",
     "bluebird": "^3.7.2",
     "browserify-versionify": "^1.0.6",
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "es6-map": "^0.1.5",
     "es6-symbol": "^3.1.3",
     "eventemitter3": "^4.0.0",
-    "glslify": "^7.0.0",
-    "imports-loader": "^0.8.0",
+    "glslify": "^7.1.1",
+    "imports-loader": "^3.0.0",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "jsdom": "^16.2.0",
+    "jsdom": "^16.6.0",
     "jsdom-global": "^3.0.2",
-    "karma": "^4.4.1",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-es6-shim": "^1.0.0",
-    "karma-mocha": "^1.3.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sinon-chai": "^2.0.2",
-    "karma-sourcemap-loader": "^0.3.7",
+    "karma-sourcemap-loader": "^0.3.8",
     "karma-sourcemap-writer": "^0.1.2",
-    "karma-webpack": "^4.0.2",
-    "mocha": "^7.1.0",
-    "nyc": "^15.0.0",
+    "karma-webpack": "^5.0.0",
+    "mocha": "^8.4.0",
+    "nyc": "^15.1.0",
     "prettier": "^1.19.1",
-    "puppeteer": "^2.1.1",
+    "puppeteer": "^9.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "sinon": "^9.0.0",
-    "sinon-chai": "^3.5.0",
-    "source-map-support": "^0.5.16",
-    "terser-webpack-plugin": "^2.3.5",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
+    "sinon": "^11.1.1",
+    "sinon-chai": "^3.7.0",
+    "source-map-support": "^0.5.19",
+    "terser-webpack-plugin": "^5.1.2",
+    "ts-loader": "^9.2.2",
+    "ts-node": "^10.0.0",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
