--- a/packages/pixi/package.json
+++ b/packages/pixi/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.example.config.js",
+    "start": "webpack serve --config ./webpack.example.config.js",
     "test": "node --max-old-space-size=2048 ./node_modules/karma/bin/karma start --single-run",
     "mocha": "mocha test/**/*.test.ts --require ts-node/register",
     "autoformat": "prettier --config .prettierrc --write --list-different \"{src,static,test,example,definitions}{/**/,/}*.{html,css,js,json,ts}\"",
@@ -110,7 +110,6 @@
     "typescript": "^3.8.3",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-simple-progress-plugin": "^0.0.5"
+    "webpack-dev-server": "^3.11.2"
   }
 }
