--- a/packages/createjs/package.json
+++ b/packages/createjs/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.example.config.js",
+    "start": "webpack serve --config ./webpack.example.config.js",
     "test": "node --max-old-space-size=2048 ./node_modules/karma/bin/karma start --single-run",
     "mocha": "mocha test/**/*.test.ts --require ts-node/register",
     "autoformat": "prettier --config .prettierrc --write --list-different \"{src,static,test,example,definitions}{/**/,/}*.{html,css,js,json,ts}\"",
@@ -64,6 +64,7 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@mcler/webpack-concat-plugin": "^4.1.3",
     "@types/bluebird": "^3.5.35",
     "@types/chai": "^4.2.18",
     "@types/easeljs": "^1.0.0",
@@ -108,8 +109,6 @@
     "typescript": "^3.8.3",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
-    "webpack-concat-plugin": "^3.0.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-simple-progress-plugin": "^0.0.5"
+    "webpack-dev-server": "^3.11.2"
   }
 }
