--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -75,7 +75,7 @@
   },
   "dependencies": {
     "inversify": "^5.0.1",
-    "tslib": "^1.11.1"
+    "tslib": "^2.2.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
@@ -119,7 +119,7 @@
     "ts-node": "^10.0.0",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3",
+    "typescript": "~4.2.4",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
