--- a/packages/createjs/package.json
+++ b/packages/createjs/package.json
@@ -57,7 +57,7 @@
   },
   "dependencies": {
     "@robotlegsjs/core": "^2.0.0",
-    "tslib": "^1.11.1"
+    "tslib": "^2.2.0"
   },
   "peerDependencies": {
     "easeljs": "^1.0.2",
@@ -67,9 +67,11 @@
     "@mcler/webpack-concat-plugin": "^4.1.3",
     "@types/bluebird": "^3.5.35",
     "@types/chai": "^4.2.18",
+    "@types/createjs-lib": "^0.0.29",
     "@types/easeljs": "^1.0.0",
     "@types/mocha": "^8.2.2",
     "@types/sinon": "^10.0.1",
+    "@types/tweenjs": "^1.0.3",
     "@types/webpack-env": "^1.16.0",
     "bluebird": "^3.7.2",
     "browserify-versionify": "^1.0.6",
@@ -106,7 +108,7 @@
     "ts-node": "^10.0.0",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3",
+    "typescript": "~4.2.4",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
