--- a/packages/openfl/package.json
+++ b/packages/openfl/package.json
@@ -57,7 +57,7 @@
   },
   "dependencies": {
     "@robotlegsjs/core": "^2.0.0",
-    "tslib": "^1.11.1"
+    "tslib": "^2.2.0"
   },
   "peerDependencies": {
     "openfl": "^8.3.0",
@@ -104,7 +104,7 @@
     "ts-node": "^10.0.0",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3",
+    "typescript": "~4.2.4",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
