--- a/packages/phaser-ce-signalcommandmap/package.json
+++ b/packages/phaser-ce-signalcommandmap/package.json
@@ -53,7 +53,7 @@
   },
   "dependencies": {
     "@robotlegsjs/core": "^2.0.0",
-    "tslib": "^1.11.1"
+    "tslib": "^2.2.0"
   },
   "peerDependencies": {
     "phaser-ce": "^2.8.1",
@@ -96,7 +96,7 @@
     "ts-node": "^10.0.0",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3",
+    "typescript": "~4.2.4",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
