--- a/packages/phaser/package.json
+++ b/packages/phaser/package.json
@@ -61,7 +61,7 @@
   },
   "dependencies": {
     "@robotlegsjs/core": "^2.0.0",
-    "tslib": "^1.11.1"
+    "tslib": "^2.2.0"
   },
   "peerDependencies": {
     "phaser": "^3.22.0",
@@ -108,7 +108,7 @@
     "ts-node": "^10.0.0",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3",
+    "typescript": "~4.2.4",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
