--- a/packages/pixi-signalmediator/package.json
+++ b/packages/pixi-signalmediator/package.json
@@ -78,7 +78,7 @@
     "@robotlegsjs/core": "^2.0.0",
     "@robotlegsjs/pixi": "^2.0.0",
     "@robotlegsjs/signals": "^1.1.0",
-    "tslib": "^1.11.1"
+    "tslib": "^2.2.0"
   },
   "peerDependencies": {
     "pixi.js": "^5.0.0",
@@ -126,7 +126,7 @@
     "ts-node": "^10.0.0",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3",
+    "typescript": "~4.2.4",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
