--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -121,7 +121,7 @@
     "terser-webpack-plugin": "^5.1.2",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
-    "typescript": "^4.2.4",
+    "typescript": "~4.2.4",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
