let .gitattributes to manage newlines

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,7 @@
   "trailingComma": "none",
   "bracketSpacing": true,
   "arrowParens": "always",
-  "endOfLine": "lf",
+  "endOfLine": "auto",
   "overrides": [
     {
       "files": "*.js",
