--- a/packages/eventemitter3/package.json
+++ b/packages/eventemitter3/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "nyc mocha",
     "karma": "node --max-old-space-size=2048 ./node_modules/karma/bin/karma start --single-run",
-    "autoformat": "prettier --write --list-different \"{src,static,test,example,definitions}/{**,**/**}.{html,css,js,json,ts}\"",
+    "autoformat": "prettier --config ../../.prettierrc --ignore-path ../../.prettierignore --write --list-different .",
     "tslint-check:src": "tslint-config-prettier-check ./tslint.json",
     "tslint-check:test": "tslint-config-prettier-check ./tslint.test.json",
     "tslint:src": "tslint --project tsconfig.json",
