--- a/packages/phaser-ce-signalcommandmap/package.json
+++ b/packages/phaser-ce-signalcommandmap/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "karma start --single-run",
     "mocha": "mocha test/**/*.test.ts --require ts-node/register",
-    "autoformat": "prettier --write --list-different \"{src,static,test,example,definitions}/{**,**/**}.{html,css,js,json,ts}\"",
+    "autoformat": "prettier --config ../../.prettierrc --ignore-path ../../.prettierignore --write --list-different .",
     "tslint-check:src": "tslint-config-prettier-check ./tslint.json",
     "tslint-check:test": "tslint-config-prettier-check ./tslint.test.json",
     "tslint:src": "tslint --project tsconfig.json",
