--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -21,7 +21,5 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "./src/**/*.ts"
-  ]
+  "include": ["./src/**/*.ts"]
 }
