--- a/packages/createjs/tsconfig.json
+++ b/packages/createjs/tsconfig.json
@@ -21,10 +21,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "./src/**/*.ts"
-  ],
-  "files": [
-    "./node_modules/@types/easeljs/index.d.ts"
-  ]
+  "include": ["./src/**/*.ts"],
+  "files": ["./node_modules/@types/easeljs/index.d.ts"]
 }
