--- a/packages/phaser-ce-signalcommandmap/package.json
+++ b/packages/phaser-ce-signalcommandmap/package.json
@@ -8,11 +8,11 @@
     "test": "karma start --single-run",
     "mocha": "mocha test/**/*.test.ts --require ts-node/register",
     "autoformat": "prettier --config ../../.prettierrc --ignore-path ../../.prettierignore --write --list-different .",
-    "tslint-check:src": "tslint-config-prettier-check ./tslint.json",
-    "tslint-check:test": "tslint-config-prettier-check ./tslint.test.json",
-    "tslint:src": "tslint --project tsconfig.json",
-    "tslint:test": "tslint --config tslint.test.json --project tsconfig.test.json",
-    "tslint": "npm run tslint-check:src && npm run tslint-check:test && npm run tslint:src && npm run tslint:test",
+    "lint-fix:src": "eslint -c .eslintrc.js --ext .ts ./src --fix",
+    "lint-fix:test": "eslint -c .eslintrc.js --ext .ts ./test --fix",
+    "lint:src": "eslint -c .eslintrc.js --ext .ts ./src",
+    "lint:test": "eslint -c .eslintrc.js --ext .ts ./test",
+    "lint": "npm run lint:src && npm run lint:test",
     "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib && rimraf lib-test && rimraf dist && rimraf dist-test",
     "compile:src": "tsc -d --importHelpers",
     "compile:test": "tsc -p tsconfig.test.json -d --importHelpers",
@@ -20,7 +20,7 @@
     "dist:production": "webpack --env production",
     "build": "npm run clean-up && npm run compile:src",
     "prepare": "npm run clean-up && npm run compile:src",
-    "publish-please": "npm run tslint && npm run autoformat && npm run clean-up && npm run test && publish-please"
+    "publish-please": "npm run lint && npm run autoformat && npm run clean-up && npm run test && publish-please"
   },
   "repository": {
     "url": "https://github.com/RobotlegsJS/Robotlegs/tree/master/packages/phaser-ce-signalcommandmap"
@@ -60,6 +60,7 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@rushstack/eslint-config": "^2.3.4",
     "@types/bluebird": "^3.5.35",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
@@ -70,6 +71,12 @@
     "chai": "^4.3.4",
     "es6-map": "^0.1.5",
     "es6-symbol": "^3.1.3",
+    "eslint": "^7.27.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^35.1.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-unicorn": "^32.0.1",
     "glslify": "^7.1.1",
     "imports-loader": "^3.0.0",
     "istanbul-instrumenter-loader": "^3.0.1",
