--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -76,22 +76,20 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@rushstack/eslint-config": "^2.3.4",
     "@types/bluebird": "^3.5.35",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
     "@types/sinon": "^10.0.1",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
     "bluebird": "^3.7.2",
     "browserify-versionify": "^1.0.6",
     "chai": "^4.3.4",
     "es6-map": "^0.1.5",
     "es6-symbol": "^3.1.3",
     "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsdoc": "^35.1.0",
+    "eslint-plugin-jsdoc": "^35.1.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-unicorn": "^32.0.1",
