--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -9,6 +9,7 @@
     "karma": "node --max-old-space-size=2048 ./node_modules/karma/bin/karma start --single-run",
     "lint-fix:src": "eslint -c .eslintrc.js --ext .ts ./src --fix",
     "lint-fix:test": "eslint -c .eslintrc.js --ext .ts ./test --fix",
+    "lint-fix": "npm run lint-fix:src && npm run lint-fix:test",
     "lint:src": "eslint -c .eslintrc.js --ext .ts ./src",
     "lint:test": "eslint -c .eslintrc.js --ext .ts ./test",
     "lint": "npm run lint:src && npm run lint:test",
