--- a/.prettierignore
+++ b/.prettierignore
@@ -116,6 +116,13 @@ common/temp/
 common/autoinstallers/*/.npmrc
 **/.rush/temp/
 
+# RobotlegsJS temporary files
+**/dist-test/
+**/lib/
+**/lib-example/
+**/lib-test/
+
+
 #-------------------------------------------------------------------------------------------------------------------
 # Prettier-specific overrides
 #-------------------------------------------------------------------------------------------------------------------
