--- a/packages/eventemitter3/package.json
+++ b/packages/eventemitter3/package.json
@@ -21,7 +21,7 @@
     "dist:production": "webpack --env production",
     "build": "npm run cleanup && npm run compile:src",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run autoformat && npm run lint && npm run test && npm run build"
+    "prepublishOnly": "npm run build"
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
